# case-studies-final-project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.wandb  README.md  a2c_1m_evaluation.txt  a2c_250k_evaluation.txt  build_image.sh  dp_ideal_baseline.json  evaluate_model.sh  full_game_a2c.sh  full_game_ppo.sh  full_game_reinforce.sh  full_game_rl.sh  main.py  ppo_250k_evaluation.txt  ppo_50k_evaluation.txt  pyproject.toml  reinforce_1m_evaluation.txt  reinforce_250k_evaluation.txt  reinforce_single_turn.txt  requirements-freeze.txt  requirements.txt  run_dice_maximizer.sh  run_full_game_rl.sh  run_single_turn_rl.sh  run_supervised_scorer.sh  single_turn_rl.sh  test_expectimax.sh  test_single_turn_rl.sh
containerized/: Dockerfile.wandb  dice_sum_maximizer.py  login.sh  main.py  requirements.txt  run.sh  run_dice_maximizer.sh  run_single_turn_rl.sh  run_supervised_scorer.sh  test_single_turn_rl.sh
experiments/: 0_pareto.yaml  1_dice_ablation.yaml  2_feature_ablation.yaml  3_action_ablation.yaml  4_capacity.yaml  5_layernorm.yaml  6_activation.yaml  7_gae.yaml  8_entropy.yaml  9_shaping.yaml
paper/: 0_abstract.tex  1_introduction.bib  1_introduction.tex  2_related_work.bib  2_related_work.tex  3_methods.bib  3_problem_formulation.tex  4_methodology.tex  4_single_turn_results.bib  5_full_game_experiments.bib  5_results.tex  6_discussion.bib  6_discussion.tex  acl2019.bib  (+16 more)
yahtzee-gym/: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
yahtzee-gym/yahtzee_gym/: __init__.py
yahtzee-gym/yahtzee_gym/envs/: __init__.py  yahtzee_env.py
(+112 files in other folders)
